[package]
name = "chewingwl"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/rano-oss/iced", branch = "input_method_and_virtual_keyboard", default-features = false, features = ["wayland", "debug", "wayland_input_method", "wayland_virtual_keyboard"] }
iced_style = { git = "https://github.com/rano-oss/iced", branch = "input_method_and_virtual_keyboard" }
iced_core = { git = "https://github.com/rano-oss/iced", branch = "input_method_and_virtual_keyboard" }
iced_renderer = { git = "https://github.com/rano-oss/iced", branch = "input_method_and_virtual_keyboard" }
iced_runtime = { git = "https://github.com/rano-oss/iced", branch = "input_method_and_virtual_keyboard" }
env_logger = "0.10"
chewing = "0.9"

[profile.release]
lto = true
strip = true
opt-level = "s" #try also z
# panic = "abort"
# codegen-units = 1
